<resources>

    <string name="app_name">Geo Red Demo</string>
    
    <!-- FIXME: Strings de prueba, revisar -->
    <string name="title_activity_main">MainActivity</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <!-- fin de strings de prueba -->

    <!-- activity titles -->
    
    <string name="title_activity_main_menu">GeoRed.uy | Menú principal</string>
    <string name="title_activity_display_message">Teh Message</string>
    
    <string name="title_activity_session_login">GeoRed.uy | Menú inicial</string>
    <string name="title_activity_session_register">Registrarse en el sistema</string>
    <string name="title_activity_session_register_fbk">Registrarse por Facebook</string>
    
    <string name="title_activity_list">Teh List</string>
    <string name="title_activity_products_list">Productos</string>
    <string name="title_activity_purchases_list">Compras</string>
    <string name="title_activity_sites_list">Sitios</string>
    <string name="title_activity_stores_list">Locales</string>
    <string name="title_activity_users_list">Usuarios</string>
    <string name="title_activity_visits_list">Visitas</string>
    
    <string name="title_activity_product_detail">Datos de producto</string>
    <string name="title_activity_purchase_detail">Datos de compra</string>
    <string name="title_activity_site_detail">Datos de sitio</string>
    <string name="title_activity_store_detail">Datos de local</string>
    <string name="title_activity_user_detail">Datos de usuario</string>
    <string name="title_activity_visit_detail">Datos de visita</string>
    
    <string name="title_activity_visit_publish_comment">Publicar comentario de visita</string>
    <string name="title_activity_purchase_publish_review">Publicar evaluación de compra</string>
    <string name="title_activity_configure_notitags">Configurar etiquetas de notif.</string>
    <string name="title_activity_configure_notitypes">Configurar tipos de notif.</string>
    <string name="title_activity_product_buy_add_item">Agregar producto a compra</string>
    <string name="title_activity_product_buy_list">Comprar productos</string>
    
    <!-- buttons -->
    
    <string name="button_teh_list">Teh list</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_add">Agregar</string>
    <string name="button_buy">Comprar</string>
    <string name="button_save">Guardar</string>
    <string name="button_send">Enviar</string>
    <string name="button_comment">Comentar</string>
    <string name="button_review">Evaluar</string>
    <string name="button_visit">Visitar</string>
    <string name="button_main_menu">Menú principal</string>
    
    <string name="button_session_login">Iniciar sesión</string>
    <string name="button_session_register">Registrarse</string>
    <string name="button_session_register_fbk">Login con Facebook</string>
    
    <string name="button_map">Mapa</string>
    <string name="button_products_list">Productos</string>
    <string name="button_purchases_list">Compras</string>
    <string name="button_sites_list">Sitios</string>
    <string name="button_stores_list">Locales</string>
    <string name="button_users_list">Usuarios</string>
    <string name="button_visits_list">Visitas</string>
    
    <string name="button_user_item_add">Agregar</string>
    <string name="button_user_item_rem">Quitar</string>
    
    <string name="button_configure_notitags">Notiquetas</string>
    <string name="button_configure_notitypes">Notitipos</string>
    
    <string name="button_map_hint">Mapa de la ciudad.</string>
    <string name="button_purchases_list_hint">Lista de todas las compras.</string>
    <string name="button_products_list_hint">Lista de todos los productos.</string>
    <string name="button_sites_list_hint">Lista de todos los sitios.</string>
    <string name="button_stores_list_hint">Lista de todos los locales.</string>
    <string name="button_users_list_hint">Lista de todos los usuarios.</string>
    <string name="button_visits_list_hint">Lista de todas las visitas.</string>
    <string name="button_configure_notitags_hint">Cambia la configuración de las notificaciones por etiquetas</string>
    <string name="button_configure_notitypes_hint">Cambia la configuración de las notificaciones por tipos</string>
    
    <!-- edittexts -->
    
    <string name="edit_text_message">el mensaje</string>
    
    <string name="edittext_session_login_username_hint">Ingresá tu apodo</string>
    <string name="edittext_session_login_password_hint">Ingresá tu contraseña</string>
    
    <string name="edittext_session_register_username_hint">Elegí un apodo único para vos</string>
    <string name="edittext_session_register_firstname_hint">(Juan Marín, Ana María)</string>
    <string name="edittext_session_register_lastname_hint">(Martínez, Da Silva)</string>
    <string name="edittext_session_register_password1_hint">Ingresá tu contraseña</string>
    <string name="edittext_session_register_password2_hint">Ingresá de nuevo la contraseña</string>
    <string name="edittext_session_register_email_hint">Ingresá tu casilla de correo</string>
    <string name="edittext_visit_comment_hint">Escribí tu comentario sobre la visita</string>
    <string name="edittext_purchase_review_hint">Escribí tu evaluación de la compra</string>
    
    <!-- textviews -->
    
    <string name="textview_username">Apodo</string>
    <string name="textview_fullname">Nombre completo</string>
    <string name="textview_firstname">Nombre de pila</string>
    <string name="textview_lastname">Apellido</string>
    <string name="textview_password">Contraseña</string>
    
    <string name="textview_name">Nombre</string>
    <string name="textview_title">Título</string>
    <string name="textview_description">Descripción</string>
    <string name="textview_address">Dirección</string>
    <string name="textview_date">Fecha</string>
    <string name="textview_email">Correo</string>
    <string name="textview_telephone">Teléfono</string>
    
    <string name="textview_comment">Comentario</string>
    <string name="textview_price">Precio</string>
    <string name="textview_priceunit">Precio unitario</string>
    <string name="textview_pricetotal">Precio total</string>
    <string name="textview_review">Evaluación</string>
    <string name="textview_units">Unidades</string>
    
    <string name="textview_filler">abc</string>
    
    <!-- others -->
    
    <string name="menu_settings">Configurar</string>
    
    <string name="register_passwords_do_not_match">Los passwords no coinciden</string>
    <string name="contact_search_hint">Contact name</string>
    <string name="options_add_contact">Add Contact</string>
    <string name="submit">Submit</string>
    
    <string name="contacts_menu">Contacts</string>
    <string name="main_menu">Main menu</string>
</resources>
