<?xml version="1.0" encoding="utf-8"?>
<!--
  - Copyright 2012 Google Inc.
  -
  - Licensed under the Apache License, Version 2.0 (the "License"); you may not
  - use this file except in compliance with the License. You may obtain a copy
  - of the License at
  -
  - http://www.apache.org/licenses/LICENSE-2.0
  -
  - Unless required by applicable law or agreed to in writing, software
  - distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  - WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  - License for the specific language governing permissions and limitations
  - under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Typically, an application registers automatically, so options below
         are disabled. Uncomment them if you want to manually register or
         unregister the device (you will also need to uncomment the equivalent
         options on DemoActivity.onOptionsItemSelected())
    -->
    <!--
    <item
        android:id="@+id/options_register"
        android:title="@string/options_register">
    </item>
    <item
        android:id="@+id/options_unregister"
        android:title="@string/options_unregister">
    </item>
    -->
    
    <item android:id="@+id/main_menu_sites" android:title="@string/button_sites_list" android:icon="@drawable/map_marker"></item>
    <item android:id="@+id/main_menu_visits" android:title="@string/button_visits_list" android:icon="@drawable/ic_menu_visits"></item>
    <item android:id="@+id/main_menu_stores" android:title="@string/button_stores_list" android:icon="@drawable/map_marker"></item>
    <item android:id="@+id/main_menu_purchases" android:title="@string/button_purchases_list" android:icon="@drawable/ic_cart"></item>
    <item android:id="@+id/main_menu_notitags" android:title="@string/button_configure_notitags" android:icon="@drawable/ic_sysbar_quicksettings_blue"></item>
    <item android:id="@+id/main_menu_notitypes" android:title="@string/button_configure_notitypes" android:icon="@drawable/ic_sysbar_quicksettings_blue"></item>

</menu>