<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical">
    
    <!-- activity_main -->
    
    <!-- layout de la actividad principal.  -->

    <!--
 	
 	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
 	
	 	<EditText
	 	    android:id="@+id/edit_text_message"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/edit_text_message" />
	 	
	 	<Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_send" 
	    	android:onClick="sendMessage"/>
	 	
	</LinearLayout>
	
 	-->
		
	 	<!-- lists -->
	 	
	 	<Button
	 	    android:id="@+id/button_map"
	        android:text="@string/button_map"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_map_onClick"/>
	 	
	 	<Button
	 	    android:id="@+id/button_users_list"
	        android:text="@string/button_users_list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_users_list_onClick"/>
	 	
	 	<Button
	 	    android:id="@+id/button_sites_list"
	        android:text="@string/button_sites_list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_sites_list_onClick"/>
	 	
	 	<Button
	 	    android:id="@+id/button_visits_list"
	        android:text="@string/button_visits_list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_visits_list_onClick"/>
	 	
	 	<Button
	 	    android:id="@+id/button_stores_list"
	        android:text="@string/button_stores_list" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_stores_list_onClick"/>
	 	
	 	<!--  
	 	<Button
	 	    android:id="@+id/button_products_list"
	        android:text="@string/button_products_list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_products_list_onClick"/>
	    	-->
	 	
	 	<Button
	 	    android:id="@+id/button_purchases_list"
	        android:text="@string/button_purchases_list"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_purchases_list_onClick"/>
		
	 	<!-- configure -->
	 	
	 	<Button
	 	    android:id="@+id/button_configure_notitags"
	        android:text="@string/button_configure_notitags"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_configure_notitags_onClick"/>
	 	
	 	<Button
	 	    android:id="@+id/button_configure_notitypes"
	        android:text="@string/button_configure_notitypes"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_configure_notitypes_onClick"/>
	
</LinearLayout>
