<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <!-- session_login_activity -->


    <!--
         layout de la actividad Iniciar sesión en el sistema.
		lo utiliza la actividad SessionLoginActivity.
    -->


    <!-- user name -->

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:text="@string/textview_username"
            android:textSize="18dip"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="2"
            android:hint="@string/edittext_session_login_username_hint"
            android:textSize="18dip" />
    </LinearLayout>

    <!-- password -->

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="1"
            android:text="@string/textview_password"
            android:textSize="18dip"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_weight="2"
            android:hint="@string/edittext_session_login_password_hint"
            android:inputType="textPassword"
            android:textSize="18dip" />
    </LinearLayout>

    <!-- login button -->

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical" >

        <Button
            android:text="@string/button_session_login"
	        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="button_login_onClick"
            android:textSize="18dip" />
        <Button
            android:text="@string/button_session_register"
	        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="button_register_onClick"
            android:textSize="18dip" />
	 	
	 	<Button
	        android:text="@string/button_session_register_fbk"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_session_register_fbk_onClick"
            android:textSize="18dip" />
	 	
	 	<Button
	        android:text="@string/button_main_menu"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:onClick="button_main_menu_onClick"
            android:textSize="18dip" />
	 	
    </LinearLayout>

</LinearLayout>